src/objects/Business__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Businesses</relationshipLabel>
        <relationshipName>Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_from_Date__c</fullName>
        <label>Valid from Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_to_Date__c</fullName>
        <label>Valid to Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Business</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Businesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>